fix: modal blocked by elements with z-index

--- a/src/loader.scss
+++ b/src/loader.scss
@@ -31,6 +31,7 @@ div.kloudless-meeting-scheduler {
       z-index: 999;
     }
     position: fixed;
+    z-index: 9999;
     width: 100%;
     height: 100%;
     left: 0;
